--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
