--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-code-blocks": "^0.1.3",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
